resources/tests/invalid_syntax/while_loop.ct
//Error: Statement 'continue' can only appear inside a loop!
//3
fn hello()->void {
  while 10: //<- error
    continue;
  continue; //<- error
  break; //<- error
}
